<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context="${relativePackage}.${activityClass}" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/values"
        style="@style/EstiloTexto"
        android:textSize="@dimen/titulo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="@dimen/titulo"
        style="@style/EstiloTexto"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/boton"
        style="@style/EstiloBotones"
        android:text="@string/Arrancar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/boton"
        style="@style/EstiloBotones"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/button3"
        style="@style/EstiloBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acercade"
        android:textSize="@dimen/boton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/boton"
        style="@style/EstiloBotones"
        android:text="@string/Salir" />

</LinearLayout>